<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ilan.IlanActivity">

    <TextView
        android:id="@+id/txtListIlanlarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txtListIlanlarTextMarginStart"
        android:layout_marginTop="@dimen/txtListIlanlarTextMarginTop"
        android:text="@string/txtListIlanlarText"
        android:textColor="@color/black"
        android:textSize="@dimen/txtListIlanlarTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/linearLayoutMarginTop"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtListIlanlarText">

        <Button
            android:id="@+id/btnListListeTurDegistir"
            android:layout_width="@dimen/btnListListeTurDegistirWidth"
            android:layout_height="@dimen/btnListListeTurDegistirHeight"
            android:backgroundTint="@color/green"
            android:text="@string/btnListListeTurDegistir"
            android:textSize="@dimen/btnListListeTurDegistirTextSize" />

        <Button
            android:id="@+id/btnListSirala"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btnListSiralaHeight"
            android:backgroundTint="@color/green"
            android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
            android:text="@string/btnListSirala"
            android:textSize="@dimen/btnListSiralaTextSize" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvIlanlar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rcvIlanlarHeight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:listitem="@layout/cardview_ilan" />

</androidx.constraintlayout.widget.ConstraintLayout>